Finishing up the authentification procedures
Added new services to login, register, get, and logout a user

Updated to server side to satisify CORS

Minor updates to endpoints

Implemented user auth context
