# server/src/routes/auth.ts
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-import { register, login, logout, refreshTokens } from '../controllers/auth';
+import { getUser, register, login, logout, refreshTokens } from '../controllers/auth';
 import authMiddleware from '../middleware/auth';
 
 const router = Router();
@@ -9,6 +9,7 @@ router.post('/login', login);
 router.patch('/refresh-tokens', refreshTokens);
 
 router.use(authMiddleware);
+router.get('/user', getUser);
 router.post('/logout', logout);
 
 export default router;
